--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,11 @@
                                         <div class="created">Created{{#if client}} for {{client}}{{/if}}{{#if company}} while at {{company}}{{/if}}</div>
                                     {{/either}}
                                     <p>{{description}}</p>
+                                    <ul class="technologies">
+                                    {{#each technologies}}
+                                        <li>{{this}}</li>
+                                    {{/each}}
+                                    </ul>
                                 </div>
                             </div>
                         {{else}}
