--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
         <title>Joseph Spens</title>
         <meta name="description" content="Joseph Spens' portfolio of web applications.">
         <meta name="viewport" content="width=device-width">
-        <meta property="og:image" content="//spens.us/images/logo_90x90.png" />
+        <meta property="og:image" content="http://spens.us/images/logo_90x90.png" />
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
