Added Google+ snippets

--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" itemscope itemtype="http://schema.org/Person"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" itemscope itemtype="http://schema.org/Person"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" itemscope itemtype="http://schema.org/Person"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" itemscope itemtype="http://schema.org/Person"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Joseph Spens</title>
         <meta name="description" content="Joseph Spens' personal website and portfolio of web applications.">
         <meta name="viewport" content="width=device-width">
-        <meta property="og:title" content="Joseph Spens" />
-        <meta property="og:image" content="http://spens.us/images/logo_90x90.png" />
+        <meta property="og:title" itemprop="name" content="Joseph Spens" />
+        <meta property="og:image" itemprop="image" content="http://spens.us/images/logo_90x90.png" />
         <meta property="og:url" content="http://spens.us/" />
-        <meta property="og:description" content="Joseph Spens' personal website and portfolio of web applications.">
+        <meta property="og:description" itemprop="description" content="Joseph Spens' personal website and portfolio of web applications.">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
