Added Google+ snippets

--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,13 @@
         <title>Joseph Spens</title>
         <meta name="description" content="Joseph Spens' personal website and portfolio of web applications.">
         <meta name="viewport" content="width=device-width">
-        <meta property="og:title" itemprop="name" content="Joseph Spens" />
-        <meta property="og:image" itemprop="image" content="http://spens.us/images/logo_90x90.png" />
+        <meta property="og:title" content="Joseph Spens" />
+        <meta property="og:image" content="http://spens.us/images/logo_90x90.png" />
         <meta property="og:url" content="http://spens.us/" />
-        <meta property="og:description" itemprop="description" content="Joseph Spens' personal website and portfolio of web applications.">
+        <meta property="og:description" content="Joseph Spens' personal website and portfolio of web applications.">
+        <meta itemprop="name" content="Joseph Spens">
+        <meta itemprop="description" content="Joseph Spens' personal website and portfolio of web applications.">
+        <meta itemprop="image" content="http://spens.us/images/logo_90x90.png">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
