Fixed bug where github branch always said source

--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
 							<span class="mega-octicon octicon-git-commit"></span>
 							{{> time}}
 							<div class="title">
-								<a href="https://github.com/{{actor}}">{{actor}}</a> <span>pushed</span> to <a href="{{repository.url}}/tree/{{repository.master_branch}}">{{repository.master_branch}}</a> at <a href="{{repository.url}}" class="css-truncate css-truncate-target">{{repository.owner}}/{{repository.name}}</a>
+								<a href="https://github.com/{{actor}}">{{actor}}</a> <span>pushed</span> to <a href="{{repository.url}}/tree/{{substr payload.ref}}">{{substr payload.ref}}</a> at <a href="{{repository.url}}" class="css-truncate css-truncate-target">{{repository.owner}}/{{repository.name}}</a>
 							</div>
 							<div class="details">
 								{{> large-gravatar}}
