Added comment action for Github feed

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,11 @@
 
 			<section id="portfolio">
 				<h2>Work</h2>
-				<div class="items"></div>
+				<div class="items">
+					<div class="empty">
+						<h3>Oops... there's a problem<br />loading the portfolio feed</h3>
+					</div>
+				</div>
 			</section>
 
 		</div>
