Did some spring cleaning and added Google Analytics

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 				<h2>Work</h2>
 				<div class="items">
 					<div class="empty">
-						<h3>Oops... there's a problem<br />loading the portfolio feed</h3>
+						<h3>Oops... there's a problem loading the portfolio feed</h3>
 					</div>
 				</div>
 			</section>
@@ -140,7 +140,7 @@
 			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
 			e.src='//www.google-analytics.com/analytics.js';
 			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-			ga('create','UA-XXXXX-X');ga('send','pageview');
+			ga('create','UA-24686161-1');ga('send','pageview');
 		</script>
 
 		<!-- build:js scripts/main.js -->
