Added target="_blank" to all external links, and added more metadata to Space Advocates portfolio item

--- a/app/index.html
+++ b/app/index.html
@@ -54,9 +54,9 @@
 				<h2>About</h2>
 				<p class="bio"><span>My name is Joe Spens,</span> <span>I am a Web Developer</span> <span>living in New York City.</span></p>
 				<div class="background">
-					<p><span>I received my MS degree</span> <span>in Web Development from <a href="//rit.edu">RIT</a></span></p>
-					<p><span>I am currently the</span> <span>Lead Web Developer at <a href="//spaceadvocates.com">Space Advocates</a></span></p>
-					<p><span>I previously worked at <a href="//brandnetworksinc.com">Brand Networks</a>,</span> <span><a href="//leoburnett.us/chicago">Leo Burnett</a>, and <a href="//rga.com">R/GA</a></span></p>
+					<p><span>I received my MS degree</span> <span>in Web Development from <a href="//rit.edu" target="_blank">RIT</a></span></p>
+					<p><span>I am currently the</span> <span>Lead Web Developer at <a href="//spaceadvocates.com" target="_blank">Space Advocates</a></span></p>
+					<p><span>I previously worked at <a href="//brandnetworksinc.com" target="_blank">Brand Networks</a>,</span> <span><a href="//leoburnett.us/chicago" target="_blank">Leo Burnett</a>, and <a href="//rga.com" target="_blank">R/GA</a></span></p>
 				</div>
 			</section>
 
@@ -96,11 +96,11 @@
 		<footer>
 			<h2>Contact</h2>
 			<ul>
-				<li><a href="https://plus.google.com/u/0/105984509136518387439/posts">Google+</a></li>
-				<li><a href="https://www.facebook.com/jspens">Facebook</a></li>
-				<li><a href="https://twitter.com/JoeSpens">Twitter</a></li>
-				<li><a href="https://github.com/josephspens">Github</a></li>
-				<li><a href="http://www.linkedin.com/in/josephspens">LinkedIn</a></li>
+				<li><a href="https://plus.google.com/u/0/105984509136518387439/posts" target="_blank">Google+</a></li>
+				<li><a href="https://www.facebook.com/jspens" target="_blank">Facebook</a></li>
+				<li><a href="https://twitter.com/JoeSpens" target="_blank">Twitter</a></li>
+				<li><a href="https://github.com/josephspens" target="_blank">Github</a></li>
+				<li><a href="http://www.linkedin.com/in/josephspens" target="_blank">LinkedIn</a></li>
 			</ul>
 			<div id="mail-form">
 				<label for="name">Name</label>
