Added slight styling to the contact form

--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,8 @@
 				<p class="bio"><span>My name is Joe Spens,</span> <span>I am a Web Developer</span> <span>living in New York City.</span></p>
 				<div class="background">
 					<p><span>I received my MS degree</span> <span>in Web Development from <a href="//rit.edu" target="_blank">RIT</a></span></p>
-					<p><span>I am currently the</span> <span>Lead Web Developer at <a href="//spaceadvocates.com" target="_blank">Space Advocates</a></span></p>
-					<p><span>I previously worked at <a href="//brandnetworksinc.com" target="_blank">Brand Networks</a>,</span> <span><a href="//leoburnett.us/chicago" target="_blank">Leo Burnett</a>, and <a href="//rga.com" target="_blank">R/GA</a></span></p>
+					<p><span>I am currently a Software Engineer</span> <span>at <a href="//workmarket.com" target="_blank">Work Market</a></span></p>
+					<p><span>and the Lead Web Developer</span> <span>at <a href="//spaceadvocates.com" target="_blank">Space Advocates</a></span></p>
 				</div>
 			</section>
 
