Added rounded corners to inner block elements

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 		</nav>
 
 		<header>
-			<h2 class="logo"><span>JS</span></h2>
+			<div class="logo"><span>JS</span></div>
 			<h1>
 				<span>I like creating</span>
 				<span>web <strong>experiences</strong></span>
@@ -124,7 +124,7 @@
 						<span class="sent-text">Sent</span>
 					</div>
 				</button>
-				
+
 				<div id="captcha">
 					<script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdizOcSAAAAAL93AbPwSSK-dP5M4L2txnUbjS37"></script>
 					<noscript>
