--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 		<meta itemprop="name" content="Joseph Spens">
 		<meta itemprop="description" content="Joseph Spens' personal website and portfolio of web applications.">
 		<meta itemprop="image" content="http://spens.us/images/logo_90x90.png">
+		<link type="text/plain" rel="author" href="http://domain/humans.txt" />
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<!-- build:css(.tmp) styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css">
