--- a/app/index.html
+++ b/app/index.html
@@ -98,10 +98,11 @@
 			<h2>Contact</h2>
 			<ul>
 				<li><a href="https://plus.google.com/u/0/105984509136518387439/posts" target="_blank">Google+</a></li>
-				<li><a href="https://www.facebook.com/jspens" target="_blank">Facebook</a></li>
-				<li><a href="https://twitter.com/JoeSpens" target="_blank">Twitter</a></li>
 				<li><a href="https://github.com/josephspens" target="_blank">Github</a></li>
+				<li><a href="http://stackoverflow.com/users/1824448/joseph-spens" target="_blank">Stack Overflow</a></li>
+				<li><a href="https://twitter.com/JoeSpens" target="_blank">Twitter</a></li>
 				<li><a href="http://www.linkedin.com/in/josephspens" target="_blank">LinkedIn</a></li>
+				<li><a href="https://www.facebook.com/jspens" target="_blank">Facebook</a></li>
 			</ul>
 			<div id="mail-form">
 				<label for="name">Name</label>
