Updated google+ URL

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
 		<footer>
 			<h2>Contact</h2>
 			<ul>
-				<li><a href="https://plus.google.com/u/0/105984509136518387439/posts" target="_blank">Google+</a></li>
+				<li><a href="https://plus.google.com/+JosephSpens" target="_blank">Google+</a></li>
 				<li><a href="https://github.com/josephspens" target="_blank">Github</a></li>
 				<li><a href="http://stackoverflow.com/users/1824448/joseph-spens" target="_blank">Stack Overflow</a></li>
 				<li><a href="https://twitter.com/JoeSpens" target="_blank">Twitter</a></li>
