Edited about me

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
 
 			<section id="about">
 				<h2>About</h2>
-				<p class="bio"><span>My name is Joe Spens,</span> <span>I am a Web Developer</span> <span>living in New York City.</span></p>
+				<p class="bio">My&nbsp;name&nbsp;is&nbsp;Joseph&nbsp;Spens, I&nbsp;am&nbsp;a&nbsp;Frontend&nbsp;Web&nbsp;Engineer living&nbsp;in&nbsp;New&nbsp;York&nbsp;City.</p>
 				<div class="background">
 					<p><span>I received my MS degree</span> <span>in Web Development from <a href="//rit.edu" target="_blank">RIT</a></span></p>
 					<p><span>I am currently a Software Engineer</span> <span>at <a href="//workmarket.com" target="_blank">Work Market</a></span></p>
