Reorganized atomic css and added font-awesome social icons

--- a/app/index.html
+++ b/app/index.html
@@ -97,10 +97,10 @@
 		<footer>
 			<h2>Contact</h2>
 			<ul>
-				<li><a href="https://twitter.com/JoeSpens" target="_blank">Twitter</a></li>
-				<li><a href="https://github.com/josephspens" target="_blank">Github</a></li>
-				<li><a href="http://stackoverflow.com/users/1824448/joseph-spens" target="_blank">Stack Overflow</a></li>
-				<li><a href="https://plus.google.com/+JosephSpens" target="_blank">Google+</a></li>
+				<li><a href="https://twitter.com/JoeSpens" target="_blank"><i class="fa fa-twitter"></i></li>
+				<li><a href="https://github.com/josephspens" target="_blank"><i class="fa fa-github"></i></a></li>
+				<li><a href="http://stackoverflow.com/users/1824448/joseph-spens" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
+				<li><a href="https://plus.google.com/+JosephSpens" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 			</ul>
 			<div id="mail-form">
 				<label for="name">Name</label>
@@ -156,5 +156,5 @@
 		<!-- build:js scripts/main.js -->
 		<script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
 		<!-- endbuild -->
-</body>
+	</body>
 </html>
