Added susy and fixed JS

--- a/app/index.html
+++ b/app/index.html
@@ -31,46 +31,46 @@
 		<![endif]-->
 
 		<nav>
-			<ul>
-				<li class="home">Home</li>
-				<li class="about">About</li>
-				<li class="work">Work</li>
-				<li class="github">Code</li>
-				<li class="blog">Blog</li>
-				<li class="contact">Contact</li>
-			</ul>
+			<div class="container">
+				<ul>
+					<li class="home">Home</li>
+					<li class="about">About</li>
+					<li class="work">Work</li>
+					<li class="github">Code</li>
+					<li class="blog">Blog</li>
+					<li class="contact">Contact</li>
+				</ul>
+			</div>
 		</nav>
 
 		<header>
-			<div class="logo"><span>JS</span></div>
-			<h1>
-				<span>I like creating</span>
-				<span>web <strong>experiences</strong></span>
-			</h1>
+			<div class="container">
+				<div class="logo"><span>JS</span></div>
+				<h1>
+					<div>I like creating</div>
+					<div>web <strong>experiences</strong></div>
+				</h1>
+			</div>
 		</header>
 
-		<div id="container">
+		<section id="about">
+			<h2>About</h2>
+			<p class="bio">My&nbsp;name&nbsp;is&nbsp;Joseph&nbsp;Spens, I&nbsp;am&nbsp;a&nbsp;Frontend&nbsp;Web&nbsp;Engineer living&nbsp;in&nbsp;New&nbsp;York&nbsp;City.</p>
+			<div class="background">
+				<p><span>I received my MS degree</span> <span>in Web Development from <a href="//rit.edu" target="_blank">RIT</a></span></p>
+				<p><span>I am currently a Software Engineer</span> <span>at <a href="//workmarket.com" target="_blank">Work Market</a></span></p>
+				<p><span>and the Lead Web Developer</span> <span>at <a href="//spaceadvocates.com" target="_blank">Space Advocates</a></span></p>
+			</div>
+		</section>
 
-			<section id="about">
-				<h2>About</h2>
-				<p class="bio">My&nbsp;name&nbsp;is&nbsp;Joseph&nbsp;Spens, I&nbsp;am&nbsp;a&nbsp;Frontend&nbsp;Web&nbsp;Engineer living&nbsp;in&nbsp;New&nbsp;York&nbsp;City.</p>
-				<div class="background">
-					<p><span>I received my MS degree</span> <span>in Web Development from <a href="//rit.edu" target="_blank">RIT</a></span></p>
-					<p><span>I am currently a Software Engineer</span> <span>at <a href="//workmarket.com" target="_blank">Work Market</a></span></p>
-					<p><span>and the Lead Web Developer</span> <span>at <a href="//spaceadvocates.com" target="_blank">Space Advocates</a></span></p>
+		<section id="portfolio">
+			<h2>Work</h2>
+			<div class="items">
+				<div class="empty">
+					<h3>Oops... there's a problem loading the portfolio feed</h3>
 				</div>
-			</section>
-
-			<section id="portfolio">
-				<h2>Work</h2>
-				<div class="items">
-					<div class="empty">
-						<h3>Oops... there's a problem loading the portfolio feed</h3>
-					</div>
-				</div>
-			</section>
-
-		</div>
+			</div>
+		</section>
 
 		<div id="feeds">
 
