Add hover effect for footer social links

--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
 			<div class="container">
 				<h2>Contact</h2>
 				<ul>
-					<li><a href="https://twitter.com/JoeSpens" target="_blank"><i class="fa fa-twitter"></i></li>
+					<li><a href="https://twitter.com/JoeSpens" target="_blank"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="https://github.com/josephspens" target="_blank"><i class="fa fa-github"></i></a></li>
 					<li><a href="http://stackoverflow.com/users/1824448/joseph-spens" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
 					<li><a href="https://plus.google.com/+JosephSpens" target="_blank"><i class="fa fa-google-plus"></i></a></li>
