publish: Remove usemin and rev from grunt build
generated from commit 7441727b7d3e5444e69ed1d4cfce2a5b7cd65a84

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 		<meta itemprop="image" content="http://spens.us/images/logo_90x90.png">
 		<link type="text/plain" rel="author" href="http://domain/humans.txt">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-		<link rel="stylesheet" href="styles/17c4331b.main.css">
-		<script src="scripts/vendor/d7100892.modernizr.js"></script>
+		<!-- build:css(.tmp) styles/main.css -->
+		<link rel="stylesheet" href="styles/main.css">
+		<!-- endbuild -->
+		<!-- build:js scripts/vendor/modernizr.js -->
+		<script src="bower_components/modernizr/modernizr.js"></script>
+		<!-- endbuild -->
 	</head>
 	<body>
 		<!--[if lt IE 10]>
@@ -137,7 +141,11 @@
 			</div>
 		</footer>
 
-		<script src="scripts/bb218a37.vendor.js"></script>
+		<!-- build:js scripts/vendor.js -->
+		<!-- bower:js -->
+		<script src="bower_components/jquery/jquery.js"></script>
+		<!-- endbower -->
+		<!-- endbuild -->
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
@@ -149,6 +157,8 @@
 			ga('create','UA-24686161-1');ga('send','pageview');
 		</script>
 
-		<script data-main="scripts/085268d8.main" src="bower_components/requirejs/require.js"></script>
+		<!-- build:js scripts/main.js -->
+		<script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+		<!-- endbuild -->
 	</body>
 </html>
