Change link to resume

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
         {% endif %}
       {% endfor %}
       <li class="site-nav--item">
-        <a class="site-nav--link" target="_blank" href="https://docs.google.com/document/d/18ZeshMOtRbQEqkmcrHTWydV-UYt1Stw-NOAHuZl8fUk/edit?usp=sharing">Resumé</a>
+        <a class="site-nav--link" target="_blank" href="https://docs.google.com/document/d/18ZeshMOtRbQEqkmcrHTWydV-UYt1Stw-NOAHuZl8fUk/edit?usp=sharing">CV</a>
       </li>
     </ul>
   </nav>
