--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
 
   <div class="site-about">
     <h2>Hello world. The purpose of this site is to share an understanding of my personality, my ways of working, and my decision making strategies.</h2>
-    <p>I am self-driven, passionate, and both willing and capable to branch into new disciplines to provide the most value to my team. Those virtues have yielded a <a href="https://jchyip.medium.com/why-t-shaped-people-e8706198e437">T-shaped</a> engineer with a breadth of experiences creating alignment across roles in an R&D organization, while at the same time a depth of experiences as an individual contributor.</p>
+    <p>I am self-driven, passionate, and both willing and capable to branch into new disciplines to provide the most value to my team. Those virtues have yielded a <a href="https://jchyip.medium.com/why-t-shaped-people-e8706198e437" target="_blank">T-shaped</a> engineer with a breadth of experiences creating alignment across roles in an R&D organization, while at the same time a depth of experiences as an individual contributor.</p>
     <p>I am first and foremost a <strong>software architect</strong> passionate about finding ways to efficiently write higher quality software. Through that passion I have become an experienced <strong>product engineer</strong> with an understanding that the lines between product and engineering are often blurred, and alignment between product and technical strategies are a key component of success. The ultimate measurement of team success is through delivery, and as an <strong>agile developer</strong> I coach teams across disciplines in frameworks and methodologies that systematize and simplify the process to frequently deliver high quality work.</p>
   </div>
 
