--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@ layout: default
 
   <nav class="site-nav">
     <ul class="site-nav--items">
+      <li class="site-nav--item">
+        <a class="site-nav--link" target="_blank" href="https://drive.google.com/drive/folders/1hFblXT7f7kVw652fPjR6EXnxizFQYrjC?usp=sharing">Recruitment Kit</a>
+      </li>
+      <li class="site-nav--item">
+        <a class="site-nav--link" target="_blank" href="https://docs.google.com/document/d/18ZeshMOtRbQEqkmcrHTWydV-UYt1Stw-NOAHuZl8fUk/edit?usp=sharing">CV</a>
+      </li>
+      <li class="site-nav--item">
+        <a class="site-nav--link" target="_blank" href="https://docs.google.com/document/d/1NcI-RXQFZJLFcBT_Bx8dOUuGE_rMp-bFiK-3Pp87j20/edit?usp=share_link">README</a>
+      </li>
+      <li class="site-nav--item">
+        <a class="site-nav--link" target="_blank" href="https://docs.google.com/document/d/11t8cGzZ0EVJ8Q7r-hCZs7DgBpp8GekB36cr3cVGIvwc/edit?usp=share_link">Value Prop</a>
+      </li>
+      <li class="site-nav--item">
+        <a class="site-nav--link" target="_blank" href="https://docs.google.com/document/d/1dt4VVyaz4nE5mzZxIsx2CBqR_t0yfQDwypwece1BtuE/edit?usp=share_link">Case Studies</a>
+      </li>
       {% for page in site.pages %}
         {% if page.title %}
           <li class="site-nav--item">
@@ -15,9 +30,6 @@ layout: default
           </li>
         {% endif %}
       {% endfor %}
-      <li class="site-nav--item">
-        <a class="site-nav--link" target="_blank" href="https://docs.google.com/document/d/18ZeshMOtRbQEqkmcrHTWydV-UYt1Stw-NOAHuZl8fUk/edit?usp=sharing">CV</a>
-      </li>
     </ul>
   </nav>
 
